# oopl-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.vcxproj  game.vcxproj.filters
.github/workflows/: msbuild.yml
Resources/Cavallo/CherryBomb/: scale.py
Resources/MapData/: 1.ttt  10.ttt  11.ttt  12.ttt  120.ttt  13.ttt  14.ttt  15.ttt  16.ttt  17.ttt  18.ttt  19.ttt  2.ttt  20.ttt  21.ttt  22.ttt  23.ttt  24.ttt  25.ttt  26.ttt  27.ttt  28.ttt  29.ttt  29test.ttt  3.ttt  31.ttt  32.ttt  33.ttt  34.ttt  35.ttt  36.ttt  37.ttt  38.ttt  39.ttt  4.ttt  5.ttt  6.ttt  7.ttt  8.ttt  9.ttt
Source/Config/: Debug.h  config.h  keymap.h  scaler.h
Source/Core/: MainFrm.cpp  game.cpp  game.rc  gameView.cpp  gameView.h  stdafx.h
Source/Game/: Bag.h  Bittermap.cpp  Bittermap.h  Bomb.cpp  Bomb.h  Bug.cpp  Bug.h  Cavallo.cpp  Cavallo.h  Character.cpp  Character.h  Fish.cpp  Fish.h  GameOver.cpp  Hitbox.h  InLevel.cpp  Item.h  Map.cpp  Map.h  NPObject.h  Player.cpp  Player.h  Proxy.cpp  Proxy.h  Rock.cpp  Rock.h  RockManager.cpp  RockManager.h  ShopKeeper.cpp  ShopKeeper.h  StartScreen.cpp  Super.cpp  Super.h  Throwable.cpp  Throwable.h  UI.cpp  UI.h  Updatable.h  Vector2.cpp  Vector2.h  (+8 more)
Source/Game/UI/: Digit.cpp  Digit.h  RightTopUI.cpp  RightTopUI.h  Toolbar.cpp  Toolbar.h  UI.h  X.cpp  X.h  eh.cpp  eh.h
Source/Unity/: Hitbox.cpp  Hitbox.h  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h
gtest_src/: idk_cpp.cpp  rect.cpp  ut_hitboxPool.cpp  ut_rect.cpp  ut_vector2.cpp
